--- a/config.json
+++ b/config.json
@@ -38,7 +38,7 @@
     },
     {
       "key": "apiBaseUrl",
-      "val": "http://10.10.18.244:5000"
+      "val": "192.168.1.166:5000"
     }
   ],
   "vocs": [
