--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "TTL": 60,
-  "lastUpdate": 123591139,
+  "lastUpdate": 123591149,
   "version": 0.1,
   "screens": [
     {
@@ -38,7 +38,7 @@
     },
     {
       "key": "apiBaseUrl",
-      "val": "https://192.168.1.166:5000"
+      "val": "http://192.168.1.166:5000"
     }
   ],
   "vocs": [
