--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "TTL": 60,
-  "lastUpdate": 123591499,
+  "lastUpdate": 123591599,
   "version": 0.1,
   "screens": [
     {
@@ -18,7 +18,7 @@
     {
       "screenId": 5,
       "screenTitleKey": "voc_screen_all_sections",
-      "feedUrl": "https://yfarag.github.io/feeds/sections.json",
+      "feedUrl": "/sections/latest",
       "pageCount": 0
     }
   ],
@@ -34,7 +34,7 @@
     },
     {
       "key": "sectionLatestNews",
-      "val": "/section/latest/"
+      "val": "/news/section/"
     },
     {
       "key": "sections",
@@ -42,7 +42,7 @@
     },
     {
       "key": "apiBaseUrl",
-      "val": "http://10.10.18.244:5000"
+      "val": "http://192.168.1.166:5000/"
     },
     {
       "key": "fetchNewsUpdates",
