--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "TTL": 60,
-  "lastUpdate": 123591599,
+  "lastUpdate": 123591699,
   "version": 0.1,
   "screens": [
     {
@@ -42,7 +42,7 @@
     },
     {
       "key": "apiBaseUrl",
-      "val": "http://192.168.1.166:5000/"
+      "val": "http://192.168.1.166:5000"
     },
     {
       "key": "fetchNewsUpdates",
