--- a/config.json
+++ b/config.json
@@ -94,6 +94,10 @@
           "val": "المصادر"
         },
         {
+          "key": "voc_screen_all_sources_title",
+          "val": "كل المصادر"
+        },
+        {
           "key": "voc_screen_today",
           "val": "زوووم"
         },
